grammars/weidu-d/test/corpus/ascension.txt
================================================================================
balth
================================================================================

///////////////////////////////////////////////////////////////////////
// Ascension : BALTH
///////////////////////////////////////////////////////////////////////
// (1) Assigns weight #0 to state 12
// (2) Fixes a typo (?) in the text in state 19
// (3) makes the response triggers much more complicated in state 24
// (4) adds a bunch of dialogue starting with state 31 -- original
//      balth.dlg has 30 states
///////////////////////////////////////////////////////////////////////

SET_WEIGHT BALTH 12 #-1 // ensures that it will be first

REPLACE_SAY BALTH 19 @1060

/// round one of the verbal battle
///

/// Entry block

REPLACE BALTH 
  IF ~~ THEN BEGIN 24 // from: 23.0
    SAY #67727 
    IF ~Alignment(Player1,MASK_GOOD)
  ReputationGT(Player1,18)~ THEN REPLY #67730 GOTO a31
    IF ~!Alignment(Player1,MASK_GOOD)
  ReputationGT(Player1,18)~ THEN REPLY #67730 GOTO a32
    IF ~Alignment(Player1,MASK_GOOD)
  !ReputationGT(Player1,18)~ THEN REPLY #67730 GOTO a33
    IF ~!Alignment(Player1,MASK_GOOD)
  !ReputationGT(Player1,18)
  ReputationGT(Player1,6)~ THEN REPLY #67730 GOTO a34
    IF ~~ THEN REPLY #67731 GOTO a35
    IF ~~ THEN REPLY @1072 /* ~You won't be the first to try and kill me...and probably not the last!~ #74114 */ GOTO a36
    IF ~~ THEN REPLY #67733 GOTO a37
    IF ~Alignment(Player1,MASK_EVIL)
  !ReputationGT(Player1,6)~ THEN REPLY #67730 GOTO a38
  END

END /* end of states that are REPLACEd */

APPEND BALTH 

////////////////////////
/// Response blocks
///
/// All exit to the round 2
/// start blocks
////////////////////////

IF ~~ THEN BEGIN a31 // from: 24.0
  SAY @1074 /* ~It is true.  You are a good <PRO_MANWOMAN>, <CHARNAME>, and your stance against evil is without question.  Your fight against the taint of our evil father is worthy of praise.~ #74107 */
  IF ~~ THEN DO ~IncrementGlobal("ConvinceBalth","GLOBAL",2)~ GOTO a39
END

IF ~~ THEN BEGIN a32 // from: 24.1
  SAY @1075 /* ~I sense no innate goodness within you, <CHARNAME>...though your deeds are hailed far and wide as above reproach.  It is...interesting that one like you who must struggle so much with our father's taint inside <PRO_HIMHER> has done so much to fight true evil.~ #74108 */
  IF ~~ THEN DO ~IncrementGlobal("ConvinceBalth","GLOBAL",1)~ GOTO a39
END

IF ~~ THEN BEGIN a33 // from: 24.2
  SAY @1076 /* ~I see the good that is within you, <CHARNAME>, but your deeds are hardly above reproach.  I sense only a soul that struggles with our father's taint, that struggles to find the good path where none exists.~ #74109 */
  IF ~~ THEN DO ~IncrementGlobal("ConvinceBalth","GLOBAL",0)~ GOTO a40
END

IF ~~ THEN BEGIN a34 // from: 24.3
  SAY @1077 /* ~I sense no innate goodness within you, <CHARNAME>.  I do not think your deeds above reproach.  I sense only a soul struggling against the taint of <PRO_HISHER> father, much like mine own.~ #74111 */
  IF ~~ THEN DO ~IncrementGlobal("ConvinceBalth","GLOBAL",-1)~ GOTO a40
END

IF ~~ THEN BEGIN a35 // from: 24.4
  SAY @1078 /* ~Actually, I am the perfect person to judge, <CHARNAME>.  I, too, contain the taint of our father within me.  I, too, have felt its yearnings for blood, its efforts to exert chaos upon my life.  I have mastered it...but only barely.  Too well I know what it is capable of.~ #74113 */
  IF ~~ THEN DO ~IncrementGlobal("ConvinceBalth","GLOBAL",-1)~ GOTO a39
END

IF ~~ THEN BEGIN a36 // from: 24.5
  SAY @1079 /* ~Naturally.  Our taint brings us no peace, does it, <CHARNAME>?  We fight in self-defense and yet still we kill, still we bring destruction.  We may claim an absence of responsibility, should we desire, but I know all too well what the taint in our soul is capable of.  Only barely do I keep it mastered.~ #74115 */
  IF ~~ THEN DO ~IncrementGlobal("ConvinceBalth","GLOBAL",-2)~ GOTO a40
END

IF ~~ THEN BEGIN a37 // from: 24.6
  SAY @1080 /* ~I would expect no other response from a true <PRO_BROTHERSISTER> of mine.  I know too well the thirst for death that comes with the taint of our sire.  I have mastered it, but only barely...I pity those who are a slave to it.~ #74117 */
  IF ~~ THEN DO ~IncrementGlobal("ConvinceBalth","GLOBAL",-2)~ GOTO a40
END

IF ~~ THEN BEGIN a38 // from: 24.7
  SAY @1081 /* ~Do not make me laugh, <CHARNAME>.  If you expect me to believe that your depraved existence exists to fight against evil in this world, then you expect far too much.~ #74119 */
  IF ~~ THEN DO ~IncrementGlobal("ConvinceBalth","GLOBAL",-3)~ GOTO a41
END

IF ~~ THEN BEGIN a41 // from: 38.0
  SAY @1089 /* ~I am nothing like you.  I exist to fight against the chaos of my taint, to fight against the evil that Bhaal's legacy brings to this world.  I have faced the evil within me and I have mastered it.~ #74122 */
  IF ~~ THEN GOTO a39
END

/////////////////////////////////////////////////////////
/////////////////////////////////////////////////////////
///// verbal battle round 2
/////
///// You get a flat +1 if non-evil, 0 if evil
/////
///// DW: originally it was -1 if evil; this respects the
///// hint in the readme that there *is* a way through.
///// Depending on your reply, you get an additional
///// +1 to -2.
/////////////////////////////////////////////////////////
/////////////////////////////////////////////////////////

/////////////////////////////////////////////////////////
///// Round 2 intro blocks
/////
///// both states are functionally identical; they differ only in the entry line
/////////////////////////////////////////////////////////////////

IF ~~ THEN BEGIN a39 // from: 41.0 35.0 32.0 31.0
  SAY @1082 /* ~But regardless of our wishes on the matter, our destiny has been written for us, <CHARNAME>.  Some may run from it or deny it, while others embrace it...but each and every Bhaalspawn has a seed within them that has sprung forth a fruit laden with blood and murder.  Do you deny this?~ #80546 */
  IF ~~ THEN REPLY @1083 /* ~Are you implying that you are somehow different, Balthazar?~ #74123 */ GOTO a42
  IF ~~ THEN REPLY @1084 /* ~I have only ever acted when it was necessary, in self-defense.~ #74211 */ GOTO a95
  IF ~~ THEN REPLY @1085 /* ~You would make us out to be victims of circumstance rather than masters of our own destiny.~ #74214 */ DO ~IncrementGlobal("ConvinceBalth","GLOBAL",1)~ GOTO a97
  IF ~~ THEN REPLY @1086 /* ~I deny nothing.  Death comes for all who stand in my way.~ #74217 */ DO ~IncrementGlobal("ConvinceBalth","GLOBAL",-1)~ GOTO a99
  IF ~~ THEN REPLY @1087 /* ~I am death incarnate, fool!  Not some weak fool wrapped in denial like yourself!~ #74219 */ DO ~IncrementGlobal("ConvinceBalth","GLOBAL",-2)~ GOTO a100
END

IF ~~ THEN BEGIN a40 // from: 37.0 36.0 34.0 33.0
  SAY @1088 /* ~I have little doubt that you know whereof I speak.  The taint is strong within you...stronger than any single other spawn of our sire that I have seen.  You have felt the dreams, the urges, have you not?  The chaos that is your destiny has ripped wantonly through your life, regardless of your wishes, has it not?  Do you deny that you bring violence and destruction wherever you go, <CHARNAME>?~ #74121 */
  IF ~~ THEN REPLY @1083 /* ~Are you implying that you are somehow different, Balthazar?~ #74221 */ GOTO a42
  IF ~~ THEN REPLY @1084 /* ~I have only ever acted when it was necessary, in self-defense.~ #74222 */ GOTO a95
  IF ~~ THEN REPLY @1085 /* ~You would make us out to be victims of circumstance rather than masters of our own destiny.~ #74223 */ DO ~IncrementGlobal("ConvinceBalth","GLOBAL",1)~ GOTO a97
  IF ~~ THEN REPLY @1086 /* ~I deny nothing.  Death comes for all who stand in my way.~ #74224 */ DO ~IncrementGlobal("ConvinceBalth","GLOBAL",-1)~ GOTO a99
  IF ~~ THEN REPLY @1087 /* ~I am death incarnate, fool!  Not some weak fool wrapped in denial like yourself!~ #74225 */ DO ~IncrementGlobal("ConvinceBalth","GLOBAL",-2)~ GOTO a100
END

/////////////////////////////////////////////////////////
///// Round 2 response blocks
/////////////////////////////////////////////////////////

IF ~~ THEN BEGIN a42 // from: 40.0 39.0
  SAY @1090 /* ~No.  I have brought my share of death and destruction to this land.  But I see a larger purpose behind it...I seek to end the possibility of Bhaal's return forever, and to wipe his taint from the land.~ #74124 */
    = @1091 /* ~I have mastered the power within me and held the evil in check, but I know as well...if not better...then most of my brethren the threat that it holds for all of Faerun.  I will not allow this.  I have dedicated my life to preventing it.~ #74125 */
  IF ~!Alignment(Player1,MASK_EVIL)~ THEN DO ~IncrementGlobal("ConvinceBalth","GLOBAL",1)~ GOTO a44
  IF ~Alignment(Player1,MASK_EVIL)~ THEN DO ~IncrementGlobal("ConvinceBalth","GLOBAL",-1)~ GOTO a94
END

IF ~~ THEN BEGIN a95 // from: 40.1 39.1
  SAY @1177 /* ~Would that your claim of innocence meant anything to the dead of Saradush.  Were I to question the recent dead of Athkatla, of Baldur's Gate, of Candlekeep...would I not find some who would claim such innocence for themselves?  Who died merely because they were caught in your wake?~ #80552 */
    = @1178 /* ~Do you think that others of our kind are any different?  Count them, <CHARNAME>, and think of the multitudes of Bhaalspawn that existed and brought misery to others, if not by intent, then even by their very presence.  Would you allow such carnage to continue?  Have we not spared the entire land from agony by the slaying of our siblings?~ #80553 */
  IF ~!Alignment(Player1,MASK_EVIL)~ THEN DO ~IncrementGlobal("ConvinceBalth","GLOBAL",1)~ GOTO a44
  IF ~Alignment(Player1,MASK_EVIL)~ THEN GOTO a94
END

IF ~~ THEN BEGIN a97 // from: 40.2 39.2
  SAY @1179 /* ~You believe yourself to be the master of your destiny, do you?  The destiny foreseen long ago by Alaundo?  You believe it by choice alone that you ended up here, in this place?~ #74215 */
    = @1180 /* ~You mistake the path for the journey, my friend.  Whatever paths you have taken since leaving Candlekeep, the journey has ended here as it was always meant to.  Destiny masters us...we do not master it.~ #74216 */
  IF ~!Alignment(Player1,MASK_EVIL)~ THEN DO ~IncrementGlobal("ConvinceBalth","GLOBAL",1)~ GOTO a44
  IF ~Alignment(Player1,MASK_EVIL)~ THEN GOTO a94
END

IF ~~ THEN BEGIN a99 // from: 40.3 39.3
  SAY @1181 /* ~Yes, whether they were obstacles to be overcome or merely by-standers crossing your path.  My own life has been little different, no matter how I have struggled against it.  I am glad you see this...it will make things much easier.~ #74218 */
  IF ~!Alignment(Player1,MASK_EVIL)~ THEN DO ~IncrementGlobal("ConvinceBalth","GLOBAL",1)~ GOTO a44
  IF ~Alignment(Player1,MASK_EVIL)~ THEN GOTO a94
END

IF ~~ THEN BEGIN a100 // from: 40.4 39.4
  SAY @1182 /* ~You sound like Yaga-Shura, a giant in ego as well as body.  Yet he fell, too, when his fate came due.  The power of your blood may yet make you victorious, it is true, but the fact that you embrace the taint within you makes my own path that much the clearer.~ #74220 */
  IF ~!Alignment(Player1,MASK_EVIL)~ THEN DO ~IncrementGlobal("ConvinceBalth","GLOBAL",1)~ GOTO a44
  IF ~Alignment(Player1,MASK_EVIL)~ THEN GOTO a94
END

/////////////////////////////////////////////////////////
/////////////////////////////////////////////////////////
///// verbal battle round 3
/////
///// There are three looping branches of dialog,
///// but the player only gets to explore two of them. In
///// each, if the player's Convince score is too low (-2)
///// then Balthazar will fight rather than going back round
/////
///// The player can also quit ('enough talk') and
///// go to combat.
/////
///// If, after both loops, Convince is -2 or higher, the player
///// goes on to round 4
/////////////////////////////////////////////////////////
/////////////////////////////////////////////////////////

/////////////////////////////////////////////////////////
///// intro blocks
///// (which one you get depends on alignment)
/////////////////////////////////////////////////////////

IF ~~ THEN BEGIN a44 // from: 100.0 99.0 98.0 96.0 43.0
  SAY @1092 /* ~If only we had met under other circumstances, <CHARNAME>...I would have liked to sit and compare the paths that have brought us to this point.  If we had not been forced by destiny to bear this taint upon our souls, what would have become of us?  I regret what I must do, yet I know it must be done.~ #80547 */
  IF ~Global("WhatBecomesMelissan","LOCALS",0)~ THEN REPLY @1093 /* ~And what becomes of Melissan, then?  Is she free to raise Bhaal and complete her plans?~ #74244 */ DO ~SetGlobal("WhatBecomesMelissan","LOCALS",1)~ GOTO a45
  IF ~Global("DontHaveToDoThis","LOCALS",0)~ THEN REPLY @1094 /* ~You don't have to do this, Balthazar.  We don't have to fight each other.~ #74166 */ DO ~SetGlobal("DontHaveToDoThis","LOCALS",1)~ GOTO a71
  IF ~Global("Righteousness","LOCALS",0)~ THEN REPLY @1095 /* ~You don't honestly see yourself as the force of righteousness in all this, do you?~ #74189 */ DO ~SetGlobal("Righteousness","LOCALS",1)~ GOTO a84
  IF ~~ THEN REPLY @1096 /* ~Enough talk, then.  Let's get this over with.~ #74204 */ GOTO a93
END

IF ~~ THEN BEGIN a94 // from: 100.1 99.1 98.1 96.1 43.1
  SAY @1176 /* ~Even had destiny not brought us to this point, I doubt things would have been different.  Perhaps if you had not borne the taint of our sire, things might have been different with you.  I would have liked to meet a <PRO_MANWOMAN> such as yourself without the taint on your soul, I think.  But now I have little choice.~ #74206 */
  IF ~Global("WhatBecomesMelissan","LOCALS",0)~ THEN REPLY @1093 /* ~And what becomes of Melissan, then?  Is she free to raise Bhaal and complete her plans?~ #74247 */ DO ~SetGlobal("WhatBecomesMelissan","LOCALS",1)~ GOTO a45
  IF ~Global("DontHaveToDoThis","LOCALS",0)~ THEN REPLY @1094 /* ~You don't have to do this, Balthazar.  We don't have to fight each other.~ #74208 */ DO ~SetGlobal("DontHaveToDoThis","LOCALS",1)~ GOTO a71
  IF ~Global("Righteousness","LOCALS",0)~ THEN REPLY @1095 /* ~You don't honestly see yourself as the force of righteousness in all this, do you?~ #74209 */ DO ~SetGlobal("Righteousness","LOCALS",1)~ GOTO a84
  IF ~~ THEN REPLY @1096 /* ~Enough talk, then.  Let's get this over with.~ #74210 */ GOTO a93
END

////////////////////////
/// Second pass through 
/// the conversation
////////////////////////

IF ~~ THEN BEGIN a48 // from: 92.0 91.0 89.0 88.0 87.0 85.0 83.0 82.0 81.0 80.0 78.0 77.0 76.0 74.0 73.0 70.0 69.0 68.0 67.0 65.0 64.0 63.0 61.0 47.0
  SAY #36427 /* ~...I...~ */
  IF ~Global("WhatBecomesMelissan","LOCALS",1)
Global("DontHaveToDoThis","LOCALS",0)
Global("Righteousness","LOCALS",0)~ THEN GOTO a49
  IF ~Global("WhatBecomesMelissan","LOCALS",0)
Global("DontHaveToDoThis","LOCALS",1)
Global("Righteousness","LOCALS",0)~ THEN GOTO a49
  IF ~Global("WhatBecomesMelissan","LOCALS",0)
Global("DontHaveToDoThis","LOCALS",0)
Global("Righteousness","LOCALS",1)~ THEN GOTO a49
  IF ~Global("WhatBecomesMelissan","LOCALS",1)
Global("DontHaveToDoThis","LOCALS",1)
Global("Righteousness","LOCALS",0)~ THEN GOTO a50
  IF ~Global("WhatBecomesMelissan","LOCALS",1)
Global("DontHaveToDoThis","LOCALS",0)
Global("Righteousness","LOCALS",1)~ THEN GOTO a50
  IF ~Global("WhatBecomesMelissan","LOCALS",0)
Global("DontHaveToDoThis","LOCALS",1)
Global("Righteousness","LOCALS",1)~ THEN GOTO a50
END

IF ~~ THEN BEGIN a49 // from: 48.2 48.1 48.0
  SAY @1106 /* ~I had thought when this moment arrived, I would hold clearly to my purpose.  We must...end this, <CHARNAME>.  I wish this to be over with, one way or the other.~ #74133 */
  IF ~Global("WhatBecomesMelissan","LOCALS",0)~ THEN REPLY @1093 /* ~And what becomes of Melissan, then?  Is she free to raise Bhaal and complete her plans?~ #74245 */ DO ~SetGlobal("WhatBecomesMelissan","LOCALS",1)~ GOTO a45
  IF ~Global("DontHaveToDoThis","LOCALS",0)~ THEN REPLY @1094 /* ~You don't have to do this, Balthazar.  We don't have to fight each other.~ #74135 */ DO ~SetGlobal("DontHaveToDoThis","LOCALS",1)~ GOTO a71
  IF ~Global("Righteousness","LOCALS",0)~ THEN REPLY @1095 /* ~You don't honestly see yourself as the force of righteousness in all this, do you?~ #74136 */ DO ~SetGlobal("Righteousness","LOCALS",1)~ GOTO a84
  IF ~~ THEN REPLY @1107 /* ~Alright, Balthazar.  If that's what you want...let's end this now.~ #74137 */ GOTO a93
END

///////////////////////////////////////
/// Exit states from phase 3
////////////////////////////////////////

// failure exit state

IF ~~ THEN BEGIN a60 // from: 92.1 91.1 89.1 88.1 87.1 85.1 83.1 82.1 81.1 80.1 78.1 77.1 76.1 74.1 73.1 70.1 69.1 68.1 67.1 65.1 64.1 63.1 61.1 47.1
  SAY @1125 /* ~No.  Further dialogue is pointless.  Let us end this now, <CHARNAME>...and may the gods have pity on us all.~ #74235 */
  IF ~~ THEN DO ~Shout(ALERT)
Enemy()
EraseJournalEntry(67720)
EraseJournalEntry(67721)
EraseJournalEntry(67722)
EraseJournalEntry(67723)
EraseJournalEntry(66357)~ EXIT
END

// 'further talk is pointless' player-quit exit state

IF ~~ THEN BEGIN a93 // from: 94.3 84.4 71.5 49.3 45.5 44.3
  SAY @1175 /* ~Very well.  Come, my students...my teachings are ended.  We make our last stand now for what is right.  May the gods have pity on us all.~ #74205 */
  IF ~~ THEN DO ~Shout(ALERT)
Enemy()
EraseJournalEntry(67720)
EraseJournalEntry(67721)
EraseJournalEntry(67722)
EraseJournalEntry(67723)
EraseJournalEntry(66357)~ EXIT
END


///////////////////////////////////
//// Loop A: 'what becomes of Melissan?'
///////////////////////////////////
